llvm/test/tools/llubi/call_unknown.ll
; NOTE: Assertions have been autogenerated by utils/update_llubi_test_checks.py UTC_ARGS: --version 6
; RUN: not llubi --verbose < %s 2>&1 | FileCheck %s

declare i32 @unknown()

define i32 @main() {
  %res = call i32 @unknown()
  ret i32 %res
}
; CHECK: Entering function: main
; CHECK-NEXT: Unrecognized instruction:   %res = call i32 @unknown()
; CHECK-NEXT: error: Execution of function 'main' failed.
